--- a/index.html
+++ b/index.html
@@ -2322,10 +2322,10 @@
     <!--另一个插件，消息提示插件  -->
     <script src="js/plugins/message.js"></script>
     <!-- 总引入  -->
-    <!-- <script src="js/zipJs/jqTable.all.min.js"></script> -->
+    <script src="js/zipJs/jqTable.all.min.js"></script>
 
     <!-- 也可分开引入  -->
-    <script src="js/jqTable.all.js"></script>
+    <!-- <script src="js/jqTable.all.js"></script> -->
     <!-- <script src="js/jqTablePlugins.js"></script>
     <script src="js/jqTable.js"></script> -->
     <!-- 临时用的json -->
