--- a/index.html
+++ b/index.html
@@ -2594,7 +2594,7 @@
             console.info('选中值json', params)
           });
 
-          //表格2渲染html
+          // //表格2渲染html
           var html = template('table-tpl', { data: json });
           $('.J-table').append(html);
 
