--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
           </table>
         </div>
         <br>
-        <h4>表格2:动态表格，有二级,可展开收起</h4>
+        <h4>表格2:动态表格，有二级,可展开收起（icon替换为iconfont,可自行选择修改为圆形加减号或方形，或保持箭头，可打开fonts/iconfont/demo_fontclass.html查看）</h4>
         <div class="c-table J-table c-table--noWrap g-toggleTable--main" data-level="true">
     
         </div>
@@ -2382,7 +2382,7 @@
         <thead>
           <tr class="g-toggleTable--title">
             <th class="">
-              <div class="cell"><i class="fa fa-plus-square-o text-muted mr10 g-toggleTable--buttonAll" aria-hidden="true"></i>名称</div>
+              <div class="cell"><i class="iconfont icon-right text-muted mr10 g-toggleTable--buttonAll" aria-hidden="true"></i>名称</div>
             </th>
             <th class="">
               <div class="cell">Id</div>
@@ -2409,7 +2409,7 @@
           <tr class="c-table__row c-table__row-{{$index}} g-toggleTable--title">
             
             <td class="">
-              <div class="cell"><i class="fa fa-plus-square-o text-muted mr10 g-toggleTable--button" aria-hidden="true"></i> {{$value.name}}</div>
+              <div class="cell"><i class="iconfont icon-right text-muted mr10 g-toggleTable--button" aria-hidden="true"></i> {{$value.name}}</div>
             </td>
             <td class="">
               <div class="cell">{{$value.channelId}}</div>
